k8s/user-management/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
spec:
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management
          image: raanan7784/warehouse-user-service:v1.0.0
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
            requests:
              memory: '64Mi'
              cpu: '250m'
          ports:
            - containerPort: 8080
              name: web
