k8s/user-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management
spec:
  selector:
    app: user-management
  ports:
    - port: 8080
      name: web
