k8s/user-management/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management
  labels:
    name: user-management
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: user-management
                port:
                  number: 8080
